k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: relayterm-landing
  namespace: relayterm
  annotations:
    kubernetes.io/change-cause: "release 0.0.1"
  labels:
    app.kubernetes.io/name: relayterm-landing
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: relayterm-landing
  template:
    metadata:
      labels:
        app.kubernetes.io/name: relayterm-landing
    spec:
      containers:
        - name: landing
          image: fpinero/web-relayterm:0.0.1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
            limits:
              cpu: 100m
              memory: 64Mi
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 2
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 30
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
              add:
                - CHOWN
                - NET_BIND_SERVICE
                - SETGID
                - SETUID
      securityContext:
        seccompProfile:
          type: RuntimeDefault
